add customize grid function

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <title>Etch A Sketch</title>
 </head>
 <body>
-    <div class="button-div">
-        <button class="btn">Change Grid Number</button>
+    <div class="header">
+        <h1>Etch A Sketch</h1>
+        <button class="btn">Customize Grid</button>
     </div>
     <div class="container">
     </div>
