add clear button that clears grid

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body>
     <div class="header">
         <h1>Etch A Sketch</h1>
-        <button class="btn">Customize Grid</button>
+        <div class="buttons">
+            <button class="btn">Customize Grid</button>
+            <button class="btn clear">Clear</button>
+        </div>        
     </div>
     <div class="container">
     </div>
