--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <h1>Etch A Sketch</h1>
         <div class="buttons">
             <button class="btn">Customize Grid</button>
+            <button class="btn rgb">RGB</button>
             <button class="btn clear">Clear</button>
         </div>        
     </div>
